--- a/wwp/src/components/Login/Login.css
+++ b/wwp/src/components/Login/Login.css
@@ -5,7 +5,7 @@
   font-family: 'Nunito', sans-serif;
 }
 
-button {
+.btnContainer button {
   border: none;
   outline: none;
   width: 100%;
@@ -33,6 +33,7 @@ button {
   min-height: 600px;
   display: flex;
   flex-direction: column;
+  border-radius: 32px;
   justify-content: center;
   background: radial-gradient(
     ellipse at left bottom,
